# projects-monorepo

./: .gitignore  .gitmodules  :-  AGENTS.md
.codex/skills/: self-improvement
.playwright-cli/: page-2026-06-05T00-03-33-419Z.yml  page-2026-06-05T00-05-33-629Z.yml
docs/ai/: harness-notes.md
projects/calm-wallpaper-studio/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
projects/codex-token-dashboard/: .gitignore  README.md  index.html  package.json
projects/discord-persona-chat/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
projects/israelgpt/: README.md  settings.gradle
projects/make-image-unsettling/: .gitignore  README.md  package-lock.json  package.json
projects/marco-rubio-2028-parody/: .gitignore  .npmrc  README.md  design-qa.md  index.html  package-lock.json  package.json
projects/media-to-gif/: README.md  package-lock.json  package.json
projects/miso-one-webui/: .gitignore  README.md  pyproject.toml
projects/miso-one-webui/app/: __init__.py  main.py  miso_runtime.py  torchaudio_compat.py  transcription_runtime.py
projects/miso-one-webui/app/static/: app.js  index.html  styles.css
projects/pickup-texts-ranked/: AGENTS.md  package-lock.json  package.json  playwright.config.ts
projects/territorial-bot-lab/: README.md  package-lock.json  package.json
projects/wallforge/: .gitignore  README.md  pyproject.toml
projects/wallforge/tests/: test_cli.py  test_render.py
projects/wallforge/wallforge/: __init__.py  cli.py  render.py
(+148 files in other folders)
