[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miso-one-webui"
version = "0.1.0"
description = "Local Web UI for Miso Labs Miso TTS 8B inference."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "pydantic>=2.7,<3",
  "numpy>=1.24,<3",
  "scipy>=1.11,<2",
  "soundfile>=0.12,<1",
  "yt-dlp>=2025.1.15",
  "transformers>=4.49,<5",
  "miso-tts @ git+https://github.com/MisoLabsAI/MisoTTS.git@main",
]

[project.scripts]
miso-one-webui = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]
